<resources>
    <string name="app_name">麻模逗線上模型購物</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_products">商品列表</string>
    <string name="menu_orderCars">購物車</string>
    <string name="menu_member">訂單專區</string>

    <string name="menu_home">商品列表</string>
    <string name="menu_gallery">購物車</string>
    <string name="menu_slideshow">會員專區</string>


    <string name="text_account">帳號</string>
    <string name="edit_hint_account">請輸入帳號</string>
    <string name="text_mima">密碼</string>
    <string name="edit_hint_mima">請輸入密碼</string>
    <string name="edit_hint_mima2">請再次輸入密碼</string>
    <string name="text_name">姓名</string>
    <string name="edit_hint_name">請輸入姓名</string>
    <string name="text_email">信箱</string>
    <string name="edit_hint_email">請輸入信箱</string>
    <string name="text_addr">地址</string>
    <string name="edit_hint_addr">請輸入地址</string>
    <string name="text_phone">電話</string>
    <string name="edit_hint_phone">請輸入電話</string>
    <string name="btn_login">登入</string>
    <string name="btn_createAcc">建立帳號</string>
    <string name="btn_createAccBack">返回登入</string>
    <string name="title_activity_order_cart_list">OrderCartListActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>