<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_create_acc_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:text="@string/btn_createAcc"
        android:gravity="center_horizontal"
        android:textColor="#006895"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_acc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:text="@string/text_account"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_acc"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/text_acc"
        app:layout_constraintBaseline_toBaselineOf="@id/text_acc"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_mima"
        app:layout_constraintLeft_toLeftOf="@id/text_acc"
        app:layout_constraintTop_toBottomOf="@id/edit_acc"
        android:textSize="20sp"
        android:text="@string/text_mima"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_mima"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_mima"
        app:layout_constraintTop_toBottomOf="@id/edit_acc"
        app:layout_constraintLeft_toRightOf="@id/text_mima"
        app:layout_constraintBaseline_toBaselineOf="@id/text_mima"
        android:inputType="textPassword"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_mima2"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_mima2"
        app:layout_constraintTop_toBottomOf="@id/edit_mima"
        app:layout_constraintLeft_toRightOf="@id/text_mima"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_name"
        app:layout_constraintLeft_toLeftOf="@id/text_acc"
        app:layout_constraintTop_toBottomOf="@id/edit_mima2"
        android:textSize="20sp"
        android:text="@string/text_name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_name"
        app:layout_constraintTop_toBottomOf="@id/edit_mima2"
        app:layout_constraintLeft_toRightOf="@id/text_name"
        app:layout_constraintBaseline_toBaselineOf="@id/text_name"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_email"
        app:layout_constraintLeft_toLeftOf="@id/text_acc"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:textSize="20sp"
        android:text="@string/text_email"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_email"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_email"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintLeft_toRightOf="@id/text_email"
        app:layout_constraintBaseline_toBaselineOf="@id/text_email"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_addr"
        app:layout_constraintLeft_toLeftOf="@id/text_acc"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/text_addr"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_addr"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_addr"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintLeft_toRightOf="@id/text_addr"
        app:layout_constraintBaseline_toBaselineOf="@id/text_addr"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_phone"
        app:layout_constraintLeft_toLeftOf="@id/text_acc"
        app:layout_constraintTop_toBottomOf="@id/edit_addr"
        android:textSize="20sp"
        android:text="@string/text_phone"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_phone"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_phone"
        app:layout_constraintTop_toBottomOf="@id/edit_addr"
        app:layout_constraintLeft_toRightOf="@id/text_phone"
        app:layout_constraintBaseline_toBaselineOf="@id/text_phone"
        android:layout_marginLeft="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create"
        android:text="@string/btn_createAcc"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintLeft_toLeftOf="@id/text_mima"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back"
        android:text="@string/btn_createAccBack"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintRight_toRightOf="@id/edit_phone"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>