<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_title"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="#222222"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_acc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:text="@string/text_account"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="120dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_acc"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/text_acc"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@id/text_acc"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_mima"
        app:layout_constraintLeft_toLeftOf="@id/text_acc"
        app:layout_constraintTop_toBottomOf="@id/edit_acc"
        android:textSize="20sp"
        android:text="@string/text_mima"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_mima"
        android:ems="8"
        android:textSize="20sp"
        android:hint="@string/edit_hint_mima"
        app:layout_constraintTop_toBottomOf="@id/edit_acc"
        app:layout_constraintLeft_toRightOf="@id/text_mima"
        app:layout_constraintBaseline_toBaselineOf="@id/text_mima"
        android:inputType="textPassword"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edit_mima"
        app:layout_constraintLeft_toLeftOf="@id/text_mima"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create"
        android:text="@string/btn_createAcc"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edit_mima"
        app:layout_constraintRight_toRightOf="@id/edit_mima"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_login"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>